# P2P

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
client/: package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/receive/: page.tsx
client/app/send/: page.tsx
client/components/: file-card.tsx  theme-toggle.tsx  wifi-animation.tsx
client/lib/: utils.ts
